--- a/style.css
+++ b/style.css
@@ -128,49 +128,6 @@ a {
     cursor: pointer;
 }
 
-@media (max-width: 1024px) {
-    .container {
-        width: 70vh;
-        height: 90vh;
-        margin: 5vh;
-    }
-
-    .frente {
-        position: inherit;
-        text-align: center;
-    }
-}
-
-@media (max-width: 650px) {
-    .container {
-        width: 70vh;
-        height: 90vh;
-        margin: 5vh;
-    }
-
-    .frente {
-        position: inherit;
-        text-align: center;
-    }
-}
-
-@media (max-width: 360px) {
-    .container {
-        width: 70vh;
-        height: 90vh;
-        margin: 5vh;
-    }
-
-    /* .fundo {
-        display: none;
-    } */
-
-    .frente {
-        position: inherit;
-        text-align: center;
-    }
-}
-
 .video {
     margin: 10vh 0 0 0;
     padding: 2vh 5vh;
@@ -202,7 +159,7 @@ a {
     cursor: pointer;
     padding: 15px;
     position: absolute;
-    z-index: 1;
+    z-index: 101;
 }
 
 .toolbar {
@@ -212,6 +169,7 @@ a {
     position: absolute;
     transition: all .3s linear;
     left: -300px;
+    z-index: 100;
 }
 
 nav {
@@ -271,4 +229,101 @@ nav a {
 .lua {
     width: 50px;
     filter: var(--img-invert);
+}
+
+/*código responsivo*/
+
+@media (max-width: 1024px) {
+    .container {
+        width: 70vh;
+        height: 90vh;
+        margin: 5vh;
+    }
+
+    .frente {
+        position: inherit;
+        text-align: center;
+    }
+
+}
+
+@media (max-width: 650px) {
+    .container {
+        width: 70vh;
+        height: 90vh;
+        margin: 5vh;
+    }
+
+    .frente {
+        position: inherit;
+        text-align: center;
+    }
+}
+
+@media (max-width: 330px) {
+    .container {
+        width: 70vh;
+        height: 90vh;
+        margin: 5vh;
+    }
+
+    .frente {
+        position: inherit;
+        text-align: center;
+    }
+
+    .noturno {
+        right: 0px;
+        top: 0px;
+    }
+
+    .lua {
+        width: 40px;
+    }
+
+    .hamburguer {
+        width: 80%;
+    }
+
+    #icone {
+        padding: 0;
+    }
+}
+
+@media (max-width: 450px) {
+    .container {
+        width: 70vh;
+        height: 90vh;
+        margin: 5vh;
+    }
+
+    .frente {
+        position: inherit;
+        text-align: center;
+    }
+
+    .noturno {
+        right: 0px;
+        top: 0px;
+    }
+
+    .lua {
+        width: 40px;
+    }
+
+    .hamburguer {
+        width: 80%;
+    }
+
+    #icone {
+        padding: 10px;
+    }
+
+    .alinhamentoVideo {
+        width: 100%;
+    }
+
+    iframe {
+        width: 100%;
+    }
 }
